[gd_scene load_steps=19 format=3 uid="uid://dx42ep1hy05bl"]

[ext_resource type="Script" path="res://Scenes/test_character.gd" id="1_lv1jx"]
[ext_resource type="Script" path="res://Classes/inventory.gd" id="2_wikqp"]
[ext_resource type="Shader" path="res://Shaders/screenpixelization.gdshader" id="3_n1qom"]
[ext_resource type="PackedScene" uid="uid://owdtmj4u7ps1" path="res://Scenes/inventory.tscn" id="4_71kx0"]
[ext_resource type="Texture2D" uid="uid://d1xveej3p25o5" path="res://icon.svg" id="5_5tstd"]
[ext_resource type="PackedScene" uid="uid://g5jp47wx0eua" path="res://Scenes/test_interaction.tscn" id="6_8tg18"]
[ext_resource type="AudioStream" uid="uid://deh215xesumx4" path="res://SFX/Uses/Flashlight/buzz.wav" id="7_de7gm"]

[sub_resource type="Resource" id="Resource_2x2e1"]
script = ExtResource("2_wikqp")
slots = Array[Resource("res://Classes/item.gd")]([])

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qamml"]
height = 1.8

[sub_resource type="ViewportTexture" id="ViewportTexture_8m6i1"]
viewport_path = NodePath("InventoryViewport/PlayerViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kqoif"]
resource_local_to_scene = true
shader = ExtResource("3_n1qom")
shader_parameter/amount = 220
shader_parameter/SCREEN_TEXTURE = SubResource("ViewportTexture_8m6i1")

[sub_resource type="ViewportTexture" id="ViewportTexture_a7ekp"]
viewport_path = NodePath("InventoryViewport/ItemViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ui7hd"]
resource_local_to_scene = true
shader = ExtResource("3_n1qom")
shader_parameter/amount = 200
shader_parameter/SCREEN_TEXTURE = SubResource("ViewportTexture_a7ekp")

[sub_resource type="ViewportTexture" id="ViewportTexture_tbewj"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_ieq0k"]
resource_name = "Moving"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.1, -0.2, 0), Vector3(0, 0, 0), Vector3(0.1, -0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wrrg0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eb2d0"]
_data = {
"Moving": SubResource("Animation_ieq0k"),
"RESET": SubResource("Animation_wrrg0")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wshj7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Pivot:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="PlayerCharacter" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_lv1jx")
Equipment = SubResource("Resource_2x2e1")

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("CapsuleShape3D_qamml")

[node name="InventoryViewport" type="SubViewportContainer" parent="."]
light_mask = 31
visibility_layer = 31
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="PlayerViewport" type="SubViewport" parent="InventoryViewport"]
handle_input_locally = false
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="InventoryViewport/PlayerViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1047775

[node name="PixelizeViewport" type="SubViewport" parent="InventoryViewport"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_3d = true
canvas_cull_mask = 4294967277
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="InventoryViewport/PixelizeViewport"]
layer = 2

[node name="Shader" type="ColorRect" parent="InventoryViewport/PixelizeViewport/CanvasLayer"]
material = SubResource("ShaderMaterial_kqoif")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="InventoryViewport/PixelizeViewport"]
layer = 3

[node name="Shader" type="ColorRect" parent="InventoryViewport/PixelizeViewport/CanvasLayer2"]
material = SubResource("ShaderMaterial_ui7hd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemViewport" type="SubViewport" parent="InventoryViewport"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_3d = true
canvas_cull_mask = 4294967293
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="ItemCam" type="Camera3D" parent="InventoryViewport/ItemViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1047584

[node name="InventoryViewport" type="SubViewport" parent="InventoryViewport"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_3d = true
canvas_cull_mask = 4294966295
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="InventoryViewport/InventoryViewport"]
layer = 10

[node name="NormalCam" type="Camera3D" parent="InventoryViewport/InventoryViewport/CanvasLayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1048064
current = true

[node name="Container" parent="InventoryViewport/InventoryViewport/CanvasLayer" instance=ExtResource("4_71kx0")]
visible = false
light_mask = 2
visibility_layer = 2
offset_left = 653.0
offset_top = 121.0
offset_right = 952.0
offset_bottom = 539.0

[node name="Inventory" parent="InventoryViewport/InventoryViewport/CanvasLayer" instance=ExtResource("4_71kx0")]
visible = false
light_mask = 2
visibility_layer = 2
offset_left = 202.0
offset_top = 118.0
offset_right = 501.0
offset_bottom = 536.0

[node name="Dot" type="ColorRect" parent="InventoryViewport/InventoryViewport/CanvasLayer"]
light_mask = 3
visibility_layer = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -1.5
offset_right = 1.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="PlayerCamera" type="Node3D" parent="Pivot"]

[node name="Hand" type="Node3D" parent="Pivot/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, -0.2, -0.5)

[node name="Pointer" type="RayCast3D" parent="Pivot/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
target_position = Vector3(0, -2, 0)
collision_mask = 3

[node name="DropPoint" type="Node3D" parent="Pivot/PlayerCamera/Pointer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4, 0)

[node name="PlayerSprite2" type="Sprite3D" parent="."]
shaded = true
alpha_cut = 2
alpha_antialiasing_mode = 1
texture_filter = 2
texture = ExtResource("5_5tstd")

[node name="PlayerSprite" type="Sprite3D" parent="."]
cast_shadow = 3
shaded = true
alpha_cut = 2
alpha_antialiasing_mode = 1
texture_filter = 2
texture = ExtResource("5_5tstd")

[node name="test_interaction" parent="." instance=ExtResource("6_8tg18")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, -2)
visible = false
layers = 512
billboard = 1
no_depth_test = true
fixed_size = true
render_priority = 10
texture = SubResource("ViewportTexture_tbewj")

[node name="StepsPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="UsePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_de7gm")

[node name="MoveAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eb2d0")
}
speed_scale = 0.5

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wshj7")
